refactor var and scope map logic